# SYSGrow

./: .codex_profile.md  .coverage  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_ARCHITECTURE_REVIEW.md  AI_INTEGRATION_ACTION_PLAN.md  AI_REFACTORING_COMPLETE.md  AI_REFACTORING_PROGRESS.md  AI_REVIEW_SESSION_COMPLETE.md  AI_SERVICES_QUICK_START.md  AI_SERVICES_REFACTORING_SUMMARY.md  AI_SERVICES_REVIEW.md  ANALYTICS_API_GUIDE.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  ANALYTICS_REFACTORING_COMPLETE.md  ANALYTICS_REFACTORING_PLAN.md  ANALYTICS_SERVICE_TESTING_COMPLETE.md  API_CLEANUP_IMPLEMENTATION_PLAN.md  API_INTEGRATION_UPDATE.md  API_MIGRATION_GUIDE.md  ARCHITECTURE_BOUNDARIES.md  ARCHITECTURE_REFACTORING_PLAN.md  ARCHITECTURE_REVIEW_INDEX.md  ARCHITECTURE_REVIEW_PLANT_CREATION.md  ARCHITECTURE_REVIEW_SUMMARY.md  BACKLOG.md  Backlog.txt  CHANGELOG.md  CLARITY_IMPROVEMENTS.md  CLEANUP_COMPLETED.md  CLEANUP_SESSION_COMPLETE.md  CODE_REVIEW_FINDINGS.md  CONSOLIDATION_COMPLETE.md  CRITICAL_FIXES_COMPLETE.md  DASHBOARD_FUTURE_FEATURES.md  DASHBOARD_REFACTORING.md  DASHBOARD_REFACTORING_PLAN.md  (+110 more)
backend/: .codex.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_UPDATE_SUMMARY.txt  README.md  actuator_controller.py  auth_manager.py  backend.code-workspace  camera_core.py  config_defaults.py  database_handler.py  grow_manager.py  growth_environment.py  mqtt_fcm_notifier.py  ops.env.example  ota_updater.py  plant_growth_data.csv  plant_profile.py  pyproject.toml  requirements-dev.txt  requirements-essential.txt  requirements-lock.txt  requirements-minimal.txt  requirements.txt  requirements_enhanced.txt  smart_agriculture_app.py  start_dev.py  start_server.bat  start_simple.py  task_scheduler.py
backend/ai/: automated_retraining.py  generate_synthetic_data.py  ml_model.py  plant_growth_model.py  train_growth_model.py  train_historical_growth_model.py  train_model.py  train_plant_model.py
backend/api_routes/: sensor_api  status.py
backend/app/: __init__.py  config.py  constants.py  defaults.py  extensions.py
backend/app/control_loops/: climate_controller.py  control_logic.py  plant_sensor_controller.py
backend/app/controllers/: climate_controller.py  throttled_analytics_writer.py
backend/app/domain/: __init__.py  agronomics.py  control.py  energy.py  environmental_thresholds.py  irrigation.py  irrigation_calculator.py  leaf_health.py  notification_settings.py  photoperiod.py  plant_health.py  plant_journal_entity.py  plant_profile.py  system.py  unit_runtime.py
backend/app/enums/: __init__.py  device.py  (+1 more)
backend/config/: config_defaults.py
backend/deployment/: DEPLOYMENT.md  mosquitto.conf  sysgrow.service
backend/devices/: actuator_controller.py  camera_manager.py  sensor_manager.py
backend/docs/: CONFIGURATION.md  INDEX.md
backend/environment/: climate_controller.py  control_algorithms.py  control_logic.py  environment_manager.py  esp32_sensor_monitor.py  sensor_polling_service.py
backend/grow_room/: growth_hub_manager.py  growth_unit.py  plant_profile.py
backend/integrations/: smart_agriculture.py
backend/migrations/: add_generic_wifi_camera_support.sql  add_user_id_to_growth_units.sql  cleanup_device_schedules.py  migrate_device_schedules.py  migrate_energy_data.py
backend/models/: retraining_events.json  stage_encoder.pkl
backend/mqtt/: mqtt_broker_wrapper.py  mqtt_notifier.py
backend/relays/: gpio_relay.py  relay.py  relay_base.py  wifi_relay.py  wireless_relay.py
backend/scripts/: _css_split.py  apply_plant_soil_thresholds.py  backfill_alert_dedupe.py  backfill_alert_dedupe_enhanced.py  ci_check.py  create_pr.py  debug_create_alert.py  debug_priority.py  debug_server.py  debug_socketio.py  demo_enhanced_features.py  inspect_alerts_for_dedupe.py  install_linux.sh  network_hotspot.py  ops_health_logger.py  parse_bandit_app.py  report_missing_plant_thresholds.py  seed_data_graph_demo.py  sort_config.py  test_health_services.py  verify_light_schedule_cleanup.py
backend/sensors/: ads1115.py  co2_sensor.py  dht11_sensor.py  light_sensor.py  mq2_sensor.py  soil_moisture_sensor.py  temp_humidity_sensor.py
backend/sysgrow_smart_agriculture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/templates/: activity.html  add_plant.html  aside.html  base.html  blog.html  blog_post.html  dashboard.html  device_health.html  devices.html  energy_analytics.html  forgot_password.html  fullscreen.html  harvest.html  index.html  login.html  logout.html  macros.html  ml_dashboard.html  my_plant_detail.html  notifications.html  plant_health.html  plants.html  plants_guide.html  register.html  sensor_analytics.html  sensor_data.html  set_stage_durations.html  settings.html  system_health.html  unit_selector.html  units.html
backend/tests/: conftest.py  start_test.py  test_actuator_creation.py  test_alert_integration.py  test_alert_service_dedupe.py  test_api_deprecation.py  test_api_devices_v2.py  test_api_endpoints.py  test_api_thresholds_recommended.py  test_architecture_refactor.py  test_auth_security_routes.py  test_comprehensive_devices.py  test_connectivity_seeded.py  test_dashboard_summary_regressions.py  test_database_optimization.py  test_deps.py  test_device_schedules.py  test_efficiency_score_api.py  test_enhanced_handler.py  test_event_bus.py  test_harvest_complete.py  test_irrigation_calculator.py  test_manual_irrigation_service.py  test_minimal.py  test_ml_phase3_features.py  test_mqtt_client_factory.py  test_mqtt_wrapper_callbacks.py  test_phase5_quick.py.OBSOLETE  test_plant_grow_task.py  test_plant_journal_watering_endpoint.py  test_refactored_architecture.py  test_run_server_regressions.py  test_sensor_polling_service.py  test_server.py  test_service_integration.py  test_settings_api.py  test_simple_flask.py  test_socketio.py  test_startup.py  test_startup_regressions.py  (+5 more)
backend/utils/: event_bus.py  event_logger.py  plant_json_handler.py  relay_monitor.py
backend/var/: growth_last_run.json
backend/views/: module_units.py  relay_views.py
(+1297 files in other folders)
