[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysgrow-smart-agriculture"
version = "3.0.0"
description = "SYSGrow Smart Agriculture IoT System"
readme = "README.md"
requires-python = ">=3.8,<4"
license = { text = "MIT" }
authors = [ { name = "Sebastian Gomez", email = "patoruzuy@tutanota.com" } ]
keywords = ["iot", "agriculture", "smart-farming", "esp32", "sensors", "automation", "machine-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Agriculture",
  "Topic :: Home Automation",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

# Dependencies: populated from requirements.txt (platform-specific markers removed)
dependencies = [
  "Flask>=2.3.0,<3.0.0",
  "Flask-SocketIO>=5.3.0,<6.0.0",
  "Werkzeug>=2.3.0,<3.0.0",
  "paho-mqtt>=2.1.0",
  "requests>=2.31.0,<3.0.0",
  "pymodbus>=3.1.0,<4.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "pycryptodome>=3.18.0,<4.0.0",
  "cryptography>=41.0.0,<42.0.0",
  "numpy>=1.24.0,<2.0.0",
  "pandas>=2.0.0,<3.0.0",
  "scikit-learn>=1.3.0,<2.0.0",
  "joblib>=1.3.0,<2.0.0",
  "schedule>=1.2.0,<2.0.0",
  "APScheduler>=3.10.0,<4.0.0",
  "Pillow>=10.0.0,<11.0.0",
  "opencv-python>=4.8.0,<5.0.0",
  "opencv-contrib-python>=4.8.0,<5.0.0",
  "matplotlib>=3.7.0,<4.0.0",
  "seaborn>=0.12.0,<1.0.0",
  "plotly>=5.15.0,<6.0.0",
  "python-dateutil>=2.8.0,<3.0.0",
  "pytz>=2023.3",
  "click>=8.1.0,<9.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "psutil>=7.1.3",
  "structlog>=23.1.0,<24.0.0",
  "colorlog>=6.7.0,<7.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "lxml>=4.9.0,<5.0.0",
  "asyncio-mqtt>=0.16.0,<1.0.0",
  "aiohttp>=3.8.0,<4.0.0",
  "aiofiles>=23.2.0,<24.0.0",
  "pyserial>=3.5,<4.0.0",
  "pywin32>=306; platform_system==\"Windows\"",
  "python-systemd>=234; platform_system==\"Linux\"",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-flask>=1.2.0",
  "pytest-cov>=4.1.0",
  "black>=23.7.0",
  "flake8>=6.0.0",
  "mypy>=1.5.0",
  "isort>=5.12.0",
]
hardware = [
  "RPi.GPIO>=0.7.1",
  "gpiozero>=1.6.0",
  "adafruit-circuitpython-ads1x15>=2.2.21",
]
ai = [
  "tensorflow>=2.13.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
]
complete = [
  "tensorflow>=2.13.0",
  "torch>=2.0.0",
  "RPi.GPIO>=0.7.1",
  "adafruit-circuitpython-ads1x15>=2.2.21",
]

[project.scripts]
sysgrow-backend = "smart_agriculture_app:main"
sysgrow-scheduler = "app.workers.scheduler_cli:main"
sysgrow-ml-trainer = "ai.enhanced_ml_trainer:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs"]

[tool.setuptools.package-data]
"" = ["*.json", "*.yaml", "*.yml", "*.md", "*.txt"]
templates = ["*.html"]
static = [
  "css/*.css",
  "css/components/*.css",
  "css/sensor-analytics/*.css",
  "js/*.js",
  "js/components/*.js",
  "js/dashboard/*.js",
  "js/devices/*.js",
  "js/plants/*.js",
  "js/sensor-analytics/*.js",
  "js/settings/*.js",
  "js/utils/*.js",
  "images/*",
]
config = ["*.json", "*.yaml"]
